--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
     "@hookform/resolvers": "^3.10.0",
+    "@number-flow/react": "^0.5.5",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
