--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/daily-validator-count",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/cron/daily-pls-pool-data",
+      "schedule": "0 0 * * *"
     }
   ]
 }
