--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/generate-logo-list.js && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "generate-logos": "node scripts/generate-logo-list.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.0-beta.5",
