--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
+    "@reown/appkit": "^1.8.1",
+    "@reown/appkit-adapter-wagmi": "^1.8.1",
     "@supabase/supabase-js": "^2.47.8",
-    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-table": "^8.20.6",
     "@types/d3": "^7.4.3",
     "@types/js-cookie": "^3.0.6",
@@ -89,8 +91,8 @@
     "three": "^0.173.0",
     "three-spritetext": "^1.9.6",
     "vaul": "^1.1.2",
-    "viem": "^2.33.3",
-    "wagmi": "^2.12.29",
+    "viem": "^2.36.0",
+    "wagmi": "^2.16.8",
     "web3": "^4.16.0",
     "zod": "^3.25.67"
   },
